--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "./index.js",
   "dependencies": {
     "extend": "^2.0.0",
+    "globule": "^0.2.0",
     "require-all": "^0.0.8",
     "gulp-changed": "^1.0.0",
     "gulp-clone": "^1.0.0",
