--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "https://github.com/rumps/rump-images"
   },
+  "scripts": {
+    "test": "jshint lib test && mocha"
+  },
   "main": "./lib",
   "dependencies": {
     "extend": "^2.0.0",
@@ -22,5 +25,17 @@
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-util": "^3.0.1"
+  },
+  "devDependencies": {
+    "better-assert": "^1.0.2",
+    "buffer-equal": "^0.0.1",
+    "graceful-fs": "^3.0.5",
+    "image-size": "^0.3.5",
+    "jshint": "^2.6.0",
+    "lodash": "^3.2.0",
+    "gulp": "^3.8.8",
+    "mocha": "^2.1.0",
+    "rump": "^0.6.0",
+    "sinon": "^1.12.2"
   }
 }
