--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,9 @@ environment:
     - nodejs_version: "1"
 
 install:
-  - appveyor DownloadFile ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/windows/GraphicsMagick-1.3.19-Q8-win32-dll.exe
-  - GraphicsMagick-1.3.19-Q8-win32-dll.exe /SP /VERYSILENT /NORESTART /NOICONS
+  - appveyor DownloadFile http://downloads.sourceforge.net/graphicsmagick/GraphicsMagick-1.3.20-Q8-win64-dll.exe
+  - GraphicsMagick-1.3.19-Q8-win32-dll.exe /SP /VERYSILENT /NORESTART /NOICONS /DIR=%CD%\gm
+  - set PATH=%CD%\gm;%PATH%
   - ps: Install-Product node $env:nodejs_version
   - npm install
 
