--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ install:
   - GraphicsMagick-1.3.20-Q8-win32-dll.exe /SP /VERYSILENT /NORESTART /NOICONS /DIR=%CD%\gm
   - set PATH=%CD%\gm;%PATH%
   - ps: Install-Product node $env:nodejs_version
+  - npm install -g npm
+  - set PATH=%APPDATA%\npm;%PATH%
   - npm install
 
 test_script:
