--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "gulp-util": "^3.0.1"
   },
   "devDependencies": {
-    "better-assert": "^1.0.2",
+    "babel": "^4.4.3",
     "buffer-equal": "^0.0.1",
-    "graceful-fs": "^3.0.5",
+    "co": "^4.4.0",
+    "gulp": "^3.8.8",
     "image-size": "^0.3.5",
     "jshint": "^2.6.0",
-    "lodash": "^3.2.0",
-    "gulp": "^3.8.8",
     "mocha": "^2.1.0",
+    "mz": "^1.3.0",
     "rump": "^0.6.0",
-    "sinon": "^1.12.2"
+    "sinon": "^1.12.2",
+    "timeout-then": "^1.0.0"
   }
 }
