--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel": "^4.4.3",
     "buffer-equal": "^0.0.1",
     "co": "^4.4.0",
+    "graceful-fs": "^3.0.5",
     "gulp": "^3.8.8",
     "image-size": "^0.3.5",
     "jshint": "^2.6.0",
