--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,8 +11,12 @@ install:
   - GraphicsMagick-1.3.20-Q8-win32-dll.exe /SP /VERYSILENT /NORESTART /NOICONS /DIR=%CD%\gm
   - set PATH=%CD%\gm;%PATH%
   - ps: Install-Product node $env:nodejs_version
-  - npm install -g npm
-  - set PATH=%APPDATA%\npm;%PATH%
+  - ps: >-
+      if($env:nodejs_version -eq "0.10")
+      {
+        npm install -g npm@next
+        $env:Path = "${env:Appdata}\npm;${env:Path}"
+      }
   - npm install
 
 test_script:
