--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
+install:
+  - '[ "$TRAVIS_NODE_VERSION" != "0.10" ] || npm install -g npm@next'
+  - npm install
 node_js:
   - "0.10"
   - "0.12"
   - iojs
+script: "npm run ci"
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq -y graphicsmagick
