--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: node_js
 install:
   - '[ "$TRAVIS_NODE_VERSION" != "0.10" ] || npm install -g npm@next'
@@ -7,6 +8,7 @@ node_js:
   - "0.12"
   - iojs
 script: "npm run ci"
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq -y graphicsmagick
+addons:
+  apt:
+    packages:
+      - graphicsmagick
