--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint src test",
     "pub": "npm run test && npm run compile && npm publish",
     "pretest": "npm run lint",
-    "test": "mocha"
+    "test": "_mocha"
   },
   "dependencies": {
     "extend": "^3.0.0",
